--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,8 @@ html{
     box-sizing: inherit;
 }
 
-input[type='text']{
+input[type='text'],
+input[type='email'], textarea {
     border: thin solid #dedede;
     border-radius: 0.25rem;
     padding: 0.75rem;
@@ -21,6 +22,11 @@ input[type='text']{
     font-size: 1rem;
     line-height: 1;
     background-color: transparent;
+}
+
+textarea{
+    font-family: inherit;
+    resize: none;
 }
 
 button, 
@@ -47,8 +53,6 @@ form{
     margin-bottom: 1rem;
 }
 
-
-
 hr{
     margin: 2rem auto;
 }
@@ -58,13 +62,11 @@ img{
     height: auto;
 }
 
-
 table{
     border-spacing: 0;
     border-collapse: collapse;
     width: 100%;
 }
-
 
 th,
 td{
@@ -72,7 +74,6 @@ td{
     padding: 0.5rem;
     border-bottom: thin solid #dedede
 }
-
 
 @media screen and (min-width: 1024px){
     .grid-1-2, .grid-1-3{
@@ -87,16 +88,25 @@ td{
     }
 }
 
-
 select{
     margin-bottom:  20px;
 }
 
-
+.verification-error{
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+    text-align: center; 
+    font-size: 0.8rem;
+    margin-top: -1rem;
+    margin-bottom: 1rem;
+    width: 300px;
+    background-color: #ce4141;
+}
 
 /* ------ MAPBOX SELECTORS -------*/
 .map-container{
-    height: 500px;
+    height: 800px;
 }
 
 .map-view{
